# probe_open_gl

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  installs.md  main.cpp  tri_data.cppm  zz_add_cylinder_generator.txt  zz_shapes_into_group.txt
cmake/: EmbedResources.cmake  EmbedShaders.cmake
files/: cube.indexes.txt  cude.points.txt  cylinder.points.txt  intro.txt  main-tri-data-indexes.txt  main-tri-data-points.txt  meshes.yaml  scene.yaml  sphera_16x16.points.txt  sphera_4x4.points.txt  sphera_8x8.indexes.txt  sphera_8x8.points.txt  todo-3d-matrices.txt  tri-data.yaml
files/cylinder/: cylinder-X-5x4.poitns.txt  cylinder-Y-5x4.indexes.txt  cylinder-Y-5x4.poitns.txt  cylinder-Z-5x4.poitns.txt  cylinder.indexes.txt
files/sphera/: sphera_16x16.indexes.txt  sphera_32x32.indexes.txt  sphera_32x32.points.txt  sphera_4x4.indexes.txt
resources/: triangle.frag  triangle.vert  write_text.frag  write_text.vert
shaders/: triangle.frag  triangle.vert
src/: application.cpp  application.cppm  arguments.cpp  arguments.cppm  atom.cppm  deferred_tasks.cpp  deferred_tasks.cppm  generator.cppm  keys.cppm  main.cpp  main_window.cpp  main_window.cppm  render.cpp  render.cppm  scene.cpp  scene.cppm  sync_map.cppm  text_writer.cpp  text_writer.cppm  tri_data.cppm  utils.cppm  world.cppm  world_01.cpp  world_01.cppm  world_02.cpp  world_02.cppm
tests/: arguments_tests.cpp  deferred_tasks_tests.cpp  scene_tests.cpp  sync_map_tests.cpp  tri_data_tests.cpp
